# shidou

./: .gitignore  Cargo.toml  Dockerfile  fly.toml  package-lock.json  package.json  tailwind.config.cjs  taskfile.yml
assets/: site.webmanifest
assets/js/: dashboard.js
src/: database.rs  main.rs  routes.rs
src/handlers/: auth.rs  home.rs  mod.rs  redirect.rs
src/handlers/api/: redirect.rs
src/handlers/components/: mod.rs  redirect_url_input.rs
src/middleware/: auth.rs  logging.rs
src/models/: date.rs  mod.rs  redirect.rs  user.rs
src/utils/: discord.rs  env.rs  jwt.rs  mod.rs  strings.rs
styles/: tailwind.css
templates/components/: redirect_url_input.html
templates/layouts/: base.html
templates/pages/: dashboard.html  login.html
